Import of DTADY/Proc-Safetynet-0.03 from CPAN.
gitpan-cpan-distribution: Proc-Safetynet
gitpan-cpan-version:      0.03
gitpan-cpan-path:         DTADY/Proc-Safetynet-0.03.tar.gz
gitpan-cpan-author:       DTADY
gitpan-cpan-maturity:     released

--- a/etc/test.rc
+++ b/etc/test.rc
@@ -1,6 +1,8 @@
-id              = test
-programs        = etc/test.programs
-binpath         = /bin:/home/dexter/bin
+id                  = test
+programs            = etc/test.programs
+binpath             = /bin:/usr/bin:/home/dexter/bin
+stderr_logpath      = /home/dexter/log/stderr
+stderr_logext       = .stderr
 <unix_server>
-    socket          = /tmp/safetynet.sock
+    socket              = /tmp/safetynet.sock
 </unix_server>
