--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Proc-Safetynet
-version:      0.02
+version:      0.03
 version_from: lib/Proc/Safetynet.pm
 installdirs:  site
 requires:
+    File::Spec:                    3.12
     JSON::XS:                      2.21
     Moose:                         0.51
     POE:                           1.0003
