--- a/etc/test.rc
+++ b/etc/test.rc
@@ -1,8 +1,9 @@
 id                  = test
 programs            = etc/test.programs
 binpath             = /bin:/usr/bin:/home/dexter/bin
-stderr_logpath      = /home/dexter/log/stderr
-stderr_logext       = .stderr
+logpath             = /home/dexter/log/safetynet
+logext_stderr       = .stderr
+logext_stdout       = .stdout
 <unix_server>
     socket              = /tmp/safetynet.sock
 </unix_server>
